fix(notifications): increase z-index of toasts (#4000)

--- a/src/common/notifications/components/Toasts.less
+++ b/src/common/notifications/components/Toasts.less
@@ -3,7 +3,7 @@
 :local {
     .container {
         position: fixed;
-        z-index: 3;
+        z-index: 9999;
         top: 0;
         right: @layout-spacing-m;
     }
